--- a/Downloads/gympro-tracker/package.json
+++ b/Downloads/gympro-tracker/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build && powershell -Command \"Copy-Item dist/index.html dist/404.html; New-Item -ItemType File -Force dist/.nojekyll | Out-Null\"",
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "react-dom": "^19.1.1",
