--- a/Downloads/gympro-tracker/package.json
+++ b/Downloads/gympro-tracker/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build && powershell -Command \"Copy-Item dist/index.html dist/404.html; New-Item -ItemType File -Force dist/.nojekyll | Out-Null\"",
-    "deploy": "gh-pages -d dist -b gh-pages"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^19.1.1",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "@google/genai": "^1.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
