--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build && powershell -Command \"Copy-Item dist/index.html dist/404.html; New-Item -ItemType File -Force dist/.nojekyll | Out-Null\"",
+    "deploy": "npx gh-pages -d dist -b gh-pages",
+    "update": "git add . && git commit -m \"update\" && git push origin main && npm run predeploy && npm run deploy"
+
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
+    "@google/genai": "^1.21.0",
     "react": "^19.1.1",
-    "@google/genai": "^1.21.0"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
